--- a/AirWar/.settings/org.eclipse.core.resources.prefs
+++ b/AirWar/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,5 @@
 eclipse.preferences.version=1
-encoding//src/UI/StartPanel.java=UTF-8
+encoding//src/UI/AirWarObject.java=UTF-8
+encoding//src/UI/Hero.java=UTF-8
+encoding//src/UI/MainJPanel.java=UTF-8
 encoding//src/util/XmlParse.java=UTF-8
